# ibpnl

./: .gitignore  AGENTS.md  README.md
.github/workflows/: build-binaries.yml
backend/: ibpnl.spec  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  main.py  models.py
backend/app/api/: __init__.py  routes.py  ws.py
backend/app/ib/: __init__.py  ib_provider.py  mock_provider.py  provider.py
backend/app/services/: __init__.py  blackscholes.py  combo.py  grouping.py  trading_hours.py
backend/packaging/: entry.py
backend/tests/: conftest.py  test_api.py  test_combo.py  test_grouping.py  test_ib_provider.py  test_mock_provider.py  test_trading_hours.py
docs/: ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  GOTCHAS.md  PLAN.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: client.ts  stream.ts  types.ts
frontend/src/components/: badges.ts  candleChart.ts  extHoursShade.ts  payoffChart.ts  positionsTable.ts  searchBox.ts
frontend/src/lib/: blackscholes.ts  errors.ts  format.ts
frontend/src/pages/: combo.ts  home.ts  instrument.ts
frontend/src/state/: settings.ts
frontend/src/styles/: app.css  tokens.css
scripts/: build_binary.py
